# android-root

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  server.py
.plans/analytics/: phase-1.md  phase-2.md
.teams/: TEAM_001_file_reorganization.md  TEAM_008_review_android_shell_improvements.md  TEAM_009_feature_analytics_database.md  TEAM_010_investigate_mcp_timeout.md  TEAM_011_implement_cli_detection.md
core/: __init__.py  config.py  manager.py  models.py  shell.py
tests/: __init__.py  test_main.py
tools/: __init__.py  handlers.py
utils/: __init__.py  analytics.py
